Wed Apr  7 10:46:00 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* configure.in, sound.c, config.h.in: check for _af_ulaw2linear

Mon Apr  5 08:24:52 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am: add gnubg.sql to DATA
	* gnubg.sql, scripts/database.py: rename stat to matchstat, and change
	some PKs/FKs
	* gnubg.c (CommandLoadPython): use PathSearch.

Sun Apr  4 15:50:55 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	First implementation of gnubg-rel.database interface.

	* gnubg.sql: DDLs for gnubg database.
	* scripts/database.py: python script for adding match to database.

Sun Apr  4 15:11:10 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c (PyGameStats): add missing statistics.
	* gnubgmodule.c: new functions "gnubg.luckrating" and
	"gnubg.errorrating".

Sun Apr  4 10:35:13 2004  Joern Thyssen  <jth@gnubg.org>

	Respect $BROWSER
	(http://www.catb.org/~esr/BROWSER/index.html)

	* openurl.c: use env. variable BROWSER. Also, call "system"
	instead of g_command_line_sync which doesn't seem to work with lynx.
	

	* gnubg.c: new commands "show manual [web|gui]".
	* gtkgame.c: use "show manual [web|gui]".
	* show.c: new functions "show manual [web|gui]".

Sun Apr  4 09:43:17 2004  Joern Thyssen  <jth@gnubg.org>

	* sound.c: include <libaudiofile.h>

Thu Apr 1 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkchequer.c: Reset interupt flag on analysis start
	* sound.c: Add some error handiling to windows sound

Wed Mar 31 20:58:49 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am: add BR1_SOURCES to makebearoff and makehyper.
	* configure.in: whoops, remove "dynamic"..
	* sound.c: include <stropts.h> [SIGIO]

Wed Mar 31 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c and other files: Moved preview in preferences

Mon Mar 29 17:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Fixed small bug to allow both names to be swapped

Mon Mar 29 09:40:02 CEST 2004  Joern Thyssen  <jth@gnubg.org>
