@@ -64,7 +64,7 @@
 animation animGUI = ANIMATE_SLIDE;
 int nGUIAnimSpeed = 4, fGUIBeep = TRUE,
     fGUIHighDieFirst = TRUE, fGUIIllegal = FALSE,
-    fGUIShowPips = TRUE, fGUIDragTargetHelp = TRUE;
+    fGUIShowPips = TRUE, fGUIDragTargetHelp = TRUE, fGUIShowEPCs = TRUE;
 
 #if !GTK_CHECK_VERSION(1,3,0)
 #define g_alloca alloca
@@ -588,6 +588,7 @@ void update_pipcount ( BoardData *bd, gint points[ 2 ][ 25 ] ) {
   int anPip[ 2 ];
   char *pc;
   int f;
+  int fl;
 
   if ( fGUIShowPips ) {
 
@@ -612,6 +613,42 @@ void update_pipcount ( BoardData *bd, gint points[ 2 ][ 25 ] ) {
 
     gtk_label_set_text ( GTK_LABEL ( bd->pipcount0 ), _("n/a") );
     gtk_label_set_text ( GTK_LABEL ( bd->pipcount1 ), _("n/a") );
+
+  }
+
+  if ( fGUIShowEPCs && ms.gs != GAME_NONE ) {
+
+    float arEPC[ 2 ];
+
+    if ( EPC( points, arEPC, NULL, NULL, NULL, TRUE ) ) {
+      /* no EPCs avaiable */
+      gtk_label_set_text ( GTK_LABEL ( bd->epclabel0 ), "" );
+      gtk_label_set_text ( GTK_LABEL ( bd->epclabel1 ), "" );
+      gtk_label_set_text ( GTK_LABEL ( bd->epc0 ), "" );
+      gtk_label_set_text ( GTK_LABEL ( bd->epc1 ), "" );
+    }
+    else {
+      f = ( bd->turn > 0 );
+      fl = arEPC[ 0 ] >= 100.0f || arEPC[ 1 ] >= 100.0f;
+      gtk_label_set_text ( GTK_LABEL ( bd->epclabel0 ), _("EPC: ") );
+      gtk_label_set_text ( GTK_LABEL ( bd->epclabel1 ), _("EPC: ") );
+      pc = g_strdup_printf( fl ? "%.0f (%+.0f)" : "%.1f (%+.1f)", 
+                           arEPC[ !f ], arEPC[ !f ] - arEPC[ f ] );
+      gtk_label_set_text ( GTK_LABEL ( bd->epc0 ), pc );
+      g_free( pc );
+      pc = g_strdup_printf( fl ? "%.0f (%+.0f)" : "%.1f (%+.1f)", 
+                           arEPC[ f ], arEPC[ f ] - arEPC[ ! f ] );
+      gtk_label_set_text ( GTK_LABEL ( bd->epc1 ), pc );
+      g_free( pc );
+    }
+
+  }
+  else {
+    
+    gtk_label_set_text ( GTK_LABEL ( bd->epclabel0 ), "" );
+    gtk_label_set_text ( GTK_LABEL ( bd->epclabel1 ), "" );
+    gtk_label_set_text ( GTK_LABEL ( bd->epc0 ), "" );
+    gtk_label_set_text ( GTK_LABEL ( bd->epc1 ), "" );
 
   }
 
@@ -3630,6 +3667,7 @@ static void board_init( Board *board ) {
     GtkWidget *pw;
     GtkWidget *pwFrame;
     GtkWidget *pwvbox;
+    GtkWidget *pwt;
 
     
     board->board_data = bd;
@@ -3771,12 +3809,17 @@ static void board_init( Board *board ) {
     gtk_container_add( GTK_CONTAINER( bd->mscore0 ), bd->lscore0 );
     gtk_container_add( GTK_CONTAINER( bd->mscore0 ), bd->score0 );
 
-    /* third row: pip count */
+    /* third row: pack pip count and epc in a table */
 
-    pw = gtk_hbox_new ( FALSE, 0 );
-    gtk_box_pack_start ( GTK_BOX ( pwvbox ), pw, FALSE, FALSE, 0 );
+    pwt = gtk_table_new( 1, 2, TRUE );
+    gtk_box_pack_start( GTK_BOX( pwvbox ), pwt, FALSE, FALSE, 0 );
+
 
     /* pip count label */
+
+    pw = gtk_hbox_new ( FALSE, 0 );
+    gtk_table_attach_defaults( GTK_TABLE( pwt ), pw,
+                               0, 1, 0, 1 ); 
 
     gtk_box_pack_start ( GTK_BOX ( pw ), 
                          gtk_label_new ( _("Pips:") ), FALSE, FALSE, 0 );
@@ -3786,6 +3829,24 @@ static void board_init( Board *board ) {
     gtk_box_pack_start ( GTK_BOX ( pw ), 
                          bd->pipcount0 = gtk_label_new ( NULL ), 
                          FALSE, FALSE, 0 );
+
+    /* epc label */
+
+    pw = gtk_hbox_new ( FALSE, 0 );
+    gtk_table_attach_defaults( GTK_TABLE( pwt ), pw,
+                               1, 2, 0, 1 );
+
+    gtk_box_pack_start ( GTK_BOX ( pw ), 
+                         bd->epclabel0 = 
+                         gtk_label_new ( NULL ), FALSE, FALSE, 0 );
+
+    /* epc */
+
+    gtk_box_pack_start ( GTK_BOX ( pw ), 
+                         bd->epc0 = gtk_label_new ( NULL ), 
+                         FALSE, FALSE, 0 );
+
+
 #if USE_TIMECONTROL 
     /* third row: clock */
 
@@ -3858,12 +3919,17 @@ static void board_init( Board *board ) {
     gtk_container_add( GTK_CONTAINER( bd->mscore1 ), bd->lscore1 );
     gtk_container_add( GTK_CONTAINER( bd->mscore1 ), bd->score1 );
 
-    /* third row: pip count */
+    /* third row: pack pip count and epc in a table */
 
-    pw = gtk_hbox_new ( FALSE, 0 );
-    gtk_box_pack_start ( GTK_BOX ( pwvbox ), pw, FALSE, FALSE, 0 );
+    pwt = gtk_table_new( 1, 2, TRUE );
+    gtk_box_pack_start( GTK_BOX( pwvbox ), pwt, FALSE, FALSE, 0 );
+
 
     /* pip count label */
+
+    pw = gtk_hbox_new ( FALSE, 0 );
+    gtk_table_attach_defaults( GTK_TABLE( pwt ), pw,
+                               0, 1, 0, 1 ); 
 
     gtk_box_pack_start ( GTK_BOX ( pw ), 
                          gtk_label_new ( _("Pips:") ), FALSE, FALSE, 0 );
@@ -3874,6 +3940,21 @@ static void board_init( Board *board ) {
                          bd->pipcount1 = gtk_label_new ( NULL ), 
                          FALSE, FALSE, 0 );
 
+    /* epc label */
+
+    pw = gtk_hbox_new ( FALSE, 0 );
+    gtk_table_attach_defaults( GTK_TABLE( pwt ), pw,
+                               1, 2, 0, 1 );
+
+    gtk_box_pack_start ( GTK_BOX ( pw ), 
+                         bd->epclabel1 = 
+                         gtk_label_new ( NULL ), FALSE, FALSE, 0 );
+
+    /* epc */
+
+    gtk_box_pack_start ( GTK_BOX ( pw ), 
+                         bd->epc1 = gtk_label_new ( NULL ), 
+                         FALSE, FALSE, 0 );
 #if USE_TIMECONTROL 
     /* third row: clock */
 
